[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/stalactite.png" type="Texture" id=1]
[ext_resource path="res://src/Enemies/Stalactite.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 16.0

[node name="Stalactite" type="KinematicBody2D"]
z_index = -10
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="PlayerDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -8, -14 )
enabled = true
cast_to = Vector2( 0, 120 )
collision_mask = 3

[node name="PlayerDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 8, -14 )
enabled = true
cast_to = Vector2( 0, 120 )
collision_mask = 3

[node name="ShakeFrequency" type="Timer" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="ShakeDuration" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShakeTween" type="Tween" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="ShakeFrequency" to="." method="_on_ShakeFrequency_timeout"]
[connection signal="timeout" from="ShakeDuration" to="." method="_on_ShakeDuration_timeout"]
